--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16) # Qt 6 requires CMake >= 3.16
 set(PROJNAME "discovering-path-tracer")
 project(${PROJNAME} LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20) # For designated initialization
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 file(GLOB_RECURSE SOURCE_FILES # idk what is the best practice for src file management, so I'll do this for now
