--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(${PROJNAME} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+add_definitions(-DQT_QML_DEBUG)
+set(ENV{QT_LOGGING_RULES} "qt.*=true")
+
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
 
 file(GLOB_RECURSE SOURCE_FILES # idk what is the best practice for src file management, so I'll do this for now
     src/*.cpp
@@ -33,6 +38,28 @@ target_link_libraries(${PROJNAME} PRIVATE
 )
 qt_standard_project_setup()
 
+
+# Resources
+set_source_files_properties("src/shaders/color_frag.spv"
+    PROPERTIES QT_RESOURCE_ALIAS "color_frag.spv"
+)
+
+set_source_files_properties("src/shaders/color_vert.spv"
+    PROPERTIES QT_RESOURCE_ALIAS "color_vert.spv"
+)   
+
+set(RESOURCE_FILES
+    "src/shaders/color_frag.spv"
+    "src/shaders/color_vert.spv"
+)
+qt_add_resources(${PROJNAME} "discovering-path-tracer"
+    PREFIX
+        "/"
+    FILES
+        ${RESOURCE_FILES}
+)
+
+
 # Vulkan configuration
 find_package(Vulkan REQUIRED)
 target_include_directories(${PROJNAME} PRIVATE ${Vulkan_INCLUDE_DIRS})
@@ -55,7 +82,7 @@ elseif(UNIX AND NOT APPLE)
 endif()
 
 set_target_properties(${PROJNAME} PROPERTIES
-    WIN32_EXECUTABLE TRUE
+    WIN32_EXECUTABLE FALSE
     MACOSX_BUNDLE TRUE
 )   
 
