vertedData for cube

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,7 +210,7 @@ elseif(UNIX AND NOT APPLE)
 endif()
 
 set_target_properties(${PROJNAME} PROPERTIES
-    WIN32_EXECUTABLE TRUE
+    WIN32_EXECUTABLE FALSE
     MACOSX_BUNDLE TRUE
 )   
 
