Staging buffer to vertex buffer copy + pipeline barrier + designed initialization + camera position to uniform buffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required(VERSION 3.16) # Qt 6 requires CMake >= 3.16
 set(PROJNAME "discovering-path-tracer")
 project(${PROJNAME} LANGUAGES CXX)
-set(CMAKE_CXX_STANDARD 17)  
+set(CMAKE_CXX_STANDARD 20) # For designated initializers  
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(VULKAN_TARGET_ENV vulkan1.4)
 
